@@ -609,9 +609,10 @@ g_simple_async_report_gerror_in_idle
 #if IN_HEADER(__G_THEMED_ICON_H__)
 #if IN_FILE(__G_THEMED_ICON_C__)
 g_themed_icon_get_type  G_GNUC_CONST
-g_themed_icon_new 
-g_themed_icon_new_from_names 
-g_themed_icon_get_names 
+g_themed_icon_new
+g_themed_icon_new_with_default_fallbacks
+g_themed_icon_new_from_names
+g_themed_icon_get_names
 #endif
 #endif
 
